# uaicp

./: .gitignore  CONTRIBUTING.md  LICENSE-CONTENT.md  PROJECT-ROADMAP.md  README.md  RELEASING.md  package.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  conformance-gap.yml  feature_request.yml
.github/workflows/: reference-impl-ci.yml  website-ci.yml  website-pages-deploy.yml
docs/examples/: use-cases.md
docs/integration-guides/: ADAPTER-CONTRACT.md  AUTOGEN-ADAPTER-EXAMPLE.md  CREWAI-ADAPTER-EXAMPLE.md  FRAMEWORK-ADAPTERS.md  LANGGRAPH-ADAPTER-EXAMPLE.md  OPENAI-AGENTS-SDK-ADAPTER-EXAMPLE.md
docs/specification/: implementation-plan.md  specification.md
libs/python/: pyproject.toml
libs/python/adapter-autogen/: README.md  pyproject.toml
libs/python/adapter-autogen/src/uaicp_adapter_autogen/: __init__.py
libs/python/adapter-autogen/tests/: test_adapter.py
libs/python/core/: README.md  pyproject.toml
libs/python/core/src/uaicp_core/: __init__.py
libs/rust/: Cargo.toml
libs/rust/adapter-rig/: Cargo.toml  README.md
libs/rust/adapter-rig/src/: lib.rs
libs/rust/core/: Cargo.toml  README.md
libs/rust/core/src/: lib.rs
libs/typescript/: package-lock.json  package.json  tsconfig.base.json
libs/typescript/adapter-langgraph/: README.md  package.json  tsconfig.tsbuildinfo
libs/typescript/core/: README.md  package.json  tsconfig.tsbuildinfo
reference-impl/: CONTRIBUTING.md  README.md  ROADMAP.md  package-lock.json  package.json
reference-impl/src/: index.ts
reference-impl/src/invariant/: evaluator.test.ts  evaluator.ts
reference-impl/src/policy/: evaluator.test.ts  evaluator.ts
reference-impl/src/types/: core.ts
schema/: evidence-object.schema.json  verification-report.schema.json
specification/: .gitignore  CODE_OF_CONDUCT.md  LICENSE-CONTENT.md  PROJECT-ROADMAP.md  README.md  SECURITY.md  package.json
specification/.github/: pull_request_template.md
specification/.github/ISSUE_TEMPLATE/: roadmap-item.yml  spec-change.yml
specification/.github/workflows/: ci.yml
specification/docs/examples/: use-cases.md
specification/docs/integration-guides/: ADAPTER-CONTRACT.md  ADAPTER-MATRIX.md  ARCHITECTURE-DIAGRAMS.mdx  AUTOGEN-ADAPTER-EXAMPLE.md  CREWAI-ADAPTER-EXAMPLE.md  FRAMEWORK-ADAPTERS.md  OVERVIEW.md  adapter-contract.md  adapter-matrix.md  autogen-adapter-example.md  framework-adapters.md  langgraph-adapter-example.md
specification/docs/specification/: implementation-plan.md  specification.md
specification/governance/: CONTRIBUTING.md  GOVERNANCE.md
specification/schema/: evidence-object.schema.json  message-envelope.schema.json
specification/tests/: run-conformance.cjs
specification/tests/fixtures/: evidence-object.invalid-missing-source.json  message-envelope.invalid-missing-state.json  message-envelope.valid.json  verification-report.invalid-missing-checks.json  verification-report.valid.json
tests/: COMPLIANCE-TESTS.md
tests/fixtures/: evidence-object.valid.json
website/: CONTRIBUTING.md  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website.edit_backups/docs/integration-guides/: architecture-diagrams.v5.2026-02-26T18-31-22.mdx  architecture-diagrams.v6.2026-02-26T18-31-22.mdx  architecture-diagrams.v7.2026-02-26T18-31-22.mdx
website.edit_backups/src/components/: DiagramViewer.v2.2026-02-26T18-31-06.tsx  DiagramViewer.v4.2026-02-26T18-31-13.tsx
website/blog/: 2026-02-03-introducing-uaicp.md  authors.yml
website/docs/examples/: finance-workflow-comparison.md
website/docs/governance/: status-roadmap.md  v0.4-roadmap.md  v0.5-roadmap.md
website/docs/integration-guides/: adapter-contract.md  adapter-matrix.md  architecture-diagrams.md  framework-adapters.md  (+6 more)
website/scripts/: sync-spec-docs.mjs
website/src/: docusaurus-env.d.ts
website/static/: README.md
(+16 files in other folders)
