[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uaicp-python-workspace"
version = "0.3.0"
description = "UAICP Python Ecosystem Workspace"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["core/tests", "adapter-autogen/tests"]
pythonpath = ["core/src", "adapter-autogen/src"]
