[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uaicp-adapter-autogen"
version = "0.3.0"
description = "UAICP Reliability Protocol Adapter for Microsoft AutoGen"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "uaicp-core>=0.3.0",
    "autogen-agentchat>=0.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.hatch.build.targets.wheel]
packages = ["src/uaicp_adapter_autogen"]
