[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uaicp-core"
version = "0.3.0"
description = "UAICP Core Types and Interfaces for Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.hatch.build.targets.wheel]
packages = ["src/uaicp_core"]
