[package]
name = "uaicp-adapter-rig"
description = "UAICP Reliability Protocol Adapter for Rig (Rust-native AI Agent Framework)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
homepage = "https://github.com/UAICP/uaicp/tree/main/libs/rust/adapter-rig"
documentation = "https://docs.rs/uaicp-adapter-rig"
keywords = ["uaicp", "rig", "agent", "reliability"]
categories = ["development-tools", "api-bindings"]

[dependencies]
uaicp-core = { version = "0.3.1", path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
