[package]
name = "uaicp-core"
description = "UAICP Core Types and Traits — Rust Primitives"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
